# flux-v4

./: .clang-format  .editorconfig  .gitignore  BUGS.md  CMakeLists.txt  README.md  TODO.md  optimization-attempts.md  rendering-pipeline.md
apps/: CMakeLists.txt
bench/: CMakeLists.txt
bench/paint/: bench.mm
bench/paragraph_cache/: bench.cpp  bench.mm
bench/rebuild/: bench.cpp
cmake/: FluxApp.cmake  FluxEmbedBinary.cmake  FluxWaylandProtocols.cmake  Info.plist.in  LambdaApp.cmake  LambdaWaylandProtocols.cmake  make-icns-from-svg.cmake  sign-and-package.sh
docs/: README.md  TODO.md  TextArea-spec.md  architecture.md  composites.md  compositor-bugs.md  compositor-cleanup-spec.md  compositor-implementation-plan.md  compositor-testing.md  compositor-user-guide.md  compositor.md  (+23 more)
examples/: CMakeLists.txt
examples/actions-editor-demo/: main.cpp
examples/alert-demo/: main.cpp
examples/animation-demo/: main.cpp
examples/blend-demo/: main.cpp
examples/button-demo/: main.cpp
examples/car-multimedia/: AppState.hpp  Common.hpp  Constants.hpp  Helpers.hpp  RootView.hpp  Theme.hpp  main.cpp
examples/car-multimedia/cards/: AssistTile.hpp  DriverAssistCard.hpp  MapPreviewCard.hpp  NowPlayingCard.hpp  PhoneCard.hpp  VehicleStatusCard.hpp
examples/car-multimedia/chrome/: ClimateStrip.hpp  ClimateZoneStrip.hpp  NavRail.hpp  NavRailItem.hpp  TopBar.hpp
examples/car-multimedia/components/: AccentIconButton.hpp  AlbumArt.hpp  Avatar.hpp  BatteryGauge.hpp  Bullet.hpp  CarSideView.hpp  CarTopdown.hpp  CardHeader.hpp  Chevron.hpp  Chip.hpp  FanBarsLarge.hpp  FanControl.hpp  ManeuverBadge.hpp  Pill.hpp  ProgressLine.hpp  ScaleStrip.hpp  Stat.hpp  StylizedMap.hpp  Tab.hpp  TireDiagram.hpp
examples/car-multimedia/screens/: ClimateScreen.hpp  HomeScreen.hpp  MapScreen.hpp  ModeButton.hpp  MusicScreen.hpp  PhoneScreen.hpp  QueueRow.hpp  ScreenHost.hpp  SettingsScreen.hpp  SettingsTile.hpp  TireLabel.hpp  VehicleScreen.hpp  ZonePanel.hpp
examples/card-demo/: main.cpp
examples/checkbox-demo/: main.cpp
examples/clock-demo/: ClockViews.hpp  clock.hpp  main.cpp
examples/common/: V5ExampleApp.hpp
examples/cursor-demo/: main.cpp
examples/focus-demo/: main.cpp
examples/foreach-demo/: main.cpp
examples/gradient-demo/: main.cpp
examples/hello-world/: main.cpp
examples/hover-demo/: main.cpp
examples/icon-demo/: main.cpp
examples/image-demo/: main.cpp
examples/lambda-files/: FilesApp.hpp  FilesFlowGrid.hpp  FilesFlowGridLayout.hpp  FilesGlyphs.hpp  FilesStore.cpp  FilesStore.hpp  FilesTheme.hpp  main.cpp
examples/lambda-settings/: SettingsApp.hpp  SettingsBackend.cpp  SettingsBackend.hpp  SettingsTheme.hpp  main.cpp
examples/lambda-shell-preview/: main.cpp
examples/lambda-studio/: AppRuntime.cpp  AppRuntime.hpp  AppState.hpp  Backend.cpp  Backend.hpp  BackendInterfaces.hpp  BackendMappers.hpp  BackendTypes.hpp  ChatModels.hpp  ChatView.hpp  ChatsView.hpp  Debug.hpp  Defaults.hpp  Divider.hpp  HubView.hpp  Interfaces.hpp  LambdaStudioInterfaces.hpp  LambdaStudioLlamaEngine.hpp  LambdaStudioMappers.hpp  LambdaStudioModelManager.hpp  LambdaStudioRuntime.cpp  LambdaStudioRuntime.hpp  LambdaStudioStore.hpp  LambdaStudioTypes.hpp  LlamaEngine.hpp  MODEL_SYSTEM_PLAN.md  Mappers.hpp  MarkdownText.hpp  ModelCatalogStore.hpp  ModelManager.hpp  ModelsView.hpp  SettingsView.hpp  SharedViews.hpp  Sidebar.hpp  Store.hpp  Tooling.hpp  Types.hpp  main.cpp
examples/lambda-terminal/: TerminalCore.cpp  TerminalCore.hpp  TerminalSession.cpp  main.cpp
examples/layout-demo/: main.cpp
examples/llm-studio/: ChatArea.hpp  ChatList.hpp  ChatListRow.hpp  ChatsPanel.hpp  Divider.hpp  LlamaEngine.hpp  Menu.hpp  MenuPanel.hpp  Message.hpp  MessageBox.hpp  MessageBubble.hpp  MessageEditor.hpp  ModelBrowser.hpp  ModelManager.hpp  OllamaClient.hpp  PropertiesPanel.hpp  TODO.md  Types.hpp  main.cpp
examples/markdown-demo/: main.cpp
examples/markdown-formatter-demo/: main.cpp
examples/markdown-styler-demo/: main.cpp
examples/memo-demo/: main.cpp
examples/notes/: main.cpp
examples/output-demo/: main.cpp
examples/overlay-confirm-demo/: main.cpp
examples/picker-demo/: main.cpp
examples/popover-demo/: main.cpp
examples/reactive-demo/: main.cpp
examples/request-focus-demo/: main.cpp
examples/scene-demo/: main.cpp
examples/scene-graph/: ToggleDemoScene.hpp  main.cpp
examples/scene-graph-animation/: main.cpp
examples/scene-graph-demo/: ToggleDemoScene.hpp  main.cpp
examples/scene-graph-refresh/: main.cpp
examples/scroll-demo/: main.cpp
examples/segmented-demo/: main.cpp
examples/select-demo/: main.cpp
examples/slider-demo/: main.cpp
examples/solitaire-app/: CMakeLists.txt  app-store-readiness.md  main.cpp
examples/solitaire-demo/: app-store-readiness.md  main.cpp
examples/stack-demo/: main.cpp
examples/svg-demo/: main.cpp
examples/table-demo/: main.cpp
examples/text-demo/: main.cpp
examples/textarea-demo/: main.cpp
examples/textinput-demo/: main.cpp
examples/theme-demo/: main.cpp
examples/toast-demo/: main.cpp
examples/toggle-demo/: main.cpp
examples/tooltip-demo/: main.cpp
examples/typography-demo/: main.cpp
prototype/reactive/: CMakeLists.txt
prototype/reactive/benchmarks/: AmbientLoopPort.cpp  EffectFireBench.cpp  MemoryBench.cpp
prototype/reactive/include/: Effect.hpp  For.hpp  ReactiveCore.hpp  Show.hpp  SmallFn.hpp  ToyScene.hpp
prototype/reactive/tests/: ComputedTests.cpp  DiamondTests.cpp  EffectTests.cpp  ForShowTests.cpp  ScopeTests.cpp  SignalTests.cpp  Test.hpp
tests/ui/: CMakeLists.txt  flux_test_client.py  run_tests.py
tests/ui/apps/test_button/: main.cpp
tests/ui/apps/test_focus/: main.cpp
tests/ui/apps/test_layout/: main.cpp
tests/ui/apps/test_overlay/: main.cpp
tests/ui/apps/test_scroll/: main.cpp
tests/ui/apps/test_slider/: main.cpp
tests/ui/apps/test_text_input/: main.cpp
tests/ui/apps/test_toggle_checkbox/: main.cpp
tests/ui/suites/: __init__.py  test_button.py  test_focus.py  test_layout.py  test_overlay.py  test_scroll.py  test_slider.py  test_text_input.py  test_toggle_checkbox.py
(+971 files in other folders)
